docs: remove buderim prefix from API key examples

--- a/api-reference/authenticated/latest.mdx
+++ b/api-reference/authenticated/latest.mdx
@@ -15,7 +15,7 @@ This endpoint requires authentication. [Get your API key](/quickstart) to start 
 ## Authentication
 
 <ParamField header="Authorization" type="string" required>
-  Bearer token with your API key: `Bearer buderim_your_api_key_here`
+  Bearer token with your API key: `Bearer your_api_key_here`
 </ParamField>
 
 ## Request
@@ -24,13 +24,13 @@ This endpoint requires authentication. [Get your API key](/quickstart) to start 
 
 ```bash cURL
 curl https://api.exchangeratesapi.com.au/latest \
-  -H "Authorization: Bearer buderim_your_api_key_here"
+  -H "Authorization: Bearer your_api_key_here"
 ```
 
 ```javascript JavaScript
 const response = await fetch('https://api.exchangeratesapi.com.au/latest', {
   headers: {
-    'Authorization': 'Bearer buderim_your_api_key_here'
+    'Authorization': 'Bearer your_api_key_here'
   }
 });
 
@@ -49,7 +49,7 @@ if (data.success) {
 import requests
 
 headers = {
-    'Authorization': 'Bearer buderim_your_api_key_here'
+    'Authorization': 'Bearer your_api_key_here'
 }
 
 response = requests.get(
@@ -69,7 +69,7 @@ else:
 
 ```php PHP
 <?php
-$api_key = 'buderim_your_api_key_here';
+$api_key = 'your_api_key_here';
 
 $curl = curl_init();
 curl_setopt_array($curl, [
@@ -249,7 +249,7 @@ Authenticated endpoints return `Cache-Control: no-store` to prevent caching of u
 async function updateRateDisplay() {
   try {
     const response = await fetch('https://api.exchangeratesapi.com.au/latest', {
-      headers: { 'Authorization': 'Bearer buderim_your_api_key_here' }
+      headers: { 'Authorization': 'Bearer your_api_key_here' }
     });
     
     const data = await response.json();
@@ -313,7 +313,7 @@ portfolio = {
     'JPY': 2000    # 2k AUD to convert to JPY
 }
 
-results = calculate_portfolio_values(portfolio, 'buderim_your_api_key_here')
+results = calculate_portfolio_values(portfolio, 'your_api_key_here')
 for currency, info in results.items():
     print(f"{info['aud_amount']} AUD = {info['converted_amount']} {currency}")
 ```
@@ -367,7 +367,7 @@ class RateMonitor {
 }
 
 // Example usage
-const monitor = new RateMonitor('buderim_your_api_key_here');
+const monitor = new RateMonitor('your_api_key_here');
 monitor.setThreshold('USD', 0.5); // Alert on 0.5% change
 monitor.setThreshold('EUR', 0.5);
 
@@ -446,7 +446,7 @@ class ExchangeRateCache {
 }
 
 // Usage
-$cache = new ExchangeRateCache('buderim_your_api_key_here');
+$cache = new ExchangeRateCache('your_api_key_here');
 $rates = $cache->getLatestRates();
 
 echo "USD Rate: " . $rates['rates']['USD'] . "\n";
