--- a/rate-limits.mdx
+++ b/rate-limits.mdx
@@ -55,7 +55,7 @@ Every API response includes rate limit information in the headers:
 
 ```bash
 curl -i https://api.exchangeratesapi.com.au/latest \
-  -H "Authorization: Bearer buderim_your_api_key_here"
+  -H "Authorization: Bearer your_api_key_here"
 ```
 
 ```http
