--- a/sdks/javascript.mdx
+++ b/sdks/javascript.mdx
@@ -177,7 +177,7 @@ try {
         }
 
         // Replace with your actual API key
-        const api = new ExchangeRatesAPI('buderim_your_api_key_here');
+        const api = new ExchangeRatesAPI('your_api_key_here');
 
         async function loadRates() {
             try {
