--- a/api-reference/authenticated/convert-authenticated.mdx
+++ b/api-reference/authenticated/convert-authenticated.mdx
@@ -15,7 +15,7 @@ This endpoint requires authentication. [Get your API key](/quickstart) to start 
 ## Authentication
 
 <ParamField header="Authorization" type="string" required>
-  Bearer token with your API key: `Bearer buderim_your_api_key_here`
+  Bearer token with your API key: `Bearer your_api_key_here`
 </ParamField>
 
 ## Query Parameters
@@ -54,12 +54,12 @@ This endpoint requires authentication. [Get your API key](/quickstart) to start 
 
 ```bash cURL - Latest Rates
 curl "https://api.exchangeratesapi.com.au/convert?from=AUD&to=USD&amount=100" \
-  -H "Authorization: Bearer buderim_your_api_key_here"
+  -H "Authorization: Bearer your_api_key_here"
 ```
 
 ```bash cURL - Historical Conversion
 curl "https://api.exchangeratesapi.com.au/convert?from=AUD&to=USD&amount=100&date=2025-08-31" \
-  -H "Authorization: Bearer buderim_your_api_key_here"
+  -H "Authorization: Bearer your_api_key_here"
 ```
 
 ```javascript JavaScript
@@ -72,7 +72,7 @@ const params = new URLSearchParams({
 
 const response = await fetch(`https://api.exchangeratesapi.com.au/convert?${params}`, {
   headers: {
-    'Authorization': 'Bearer buderim_your_api_key_here'
+    'Authorization': 'Bearer your_api_key_here'
   }
 });
 
@@ -86,7 +86,7 @@ const historicalParams = new URLSearchParams({
 
 const historicalResponse = await fetch(`https://api.exchangeratesapi.com.au/convert?${historicalParams}`, {
   headers: {
-    'Authorization': 'Bearer buderim_your_api_key_here'
+    'Authorization': 'Bearer your_api_key_here'
   }
 });
 ```
@@ -97,7 +97,7 @@ import requests
 # Latest conversion
 url = "https://api.exchangeratesapi.com.au/convert"
 headers = {
-    "Authorization": "Bearer buderim_your_api_key_here"
+    "Authorization": "Bearer your_api_key_here"
 }
 params = {
     "from": "AUD",
@@ -134,7 +134,7 @@ curl_setopt_array($curl, array(
   CURLOPT_URL => "https://api.exchangeratesapi.com.au/convert?{$params}",
   CURLOPT_RETURNTRANSFER => true,
   CURLOPT_HTTPHEADER => array(
-    'Authorization: Bearer buderim_your_api_key_here'
+    'Authorization: Bearer your_api_key_here'
   ),
 ));
 
@@ -154,7 +154,7 @@ curl_setopt_array($historical_curl, array(
   CURLOPT_URL => "https://api.exchangeratesapi.com.au/convert?{$historical_params}",
   CURLOPT_RETURNTRANSFER => true,
   CURLOPT_HTTPHEADER => array(
-    'Authorization: Bearer buderim_your_api_key_here'
+    'Authorization: Bearer your_api_key_here'
   ),
 ));
 
