--- a/api-reference/authenticated/historical-date-currency.mdx
+++ b/api-reference/authenticated/historical-date-currency.mdx
@@ -15,7 +15,7 @@ This endpoint requires authentication. [Get your API key](/quickstart) to start 
 ## Authentication
 
 <ParamField header="Authorization" type="string" required>
-  Bearer token with your API key: `Bearer buderim_your_api_key_here`
+  Bearer token with your API key: `Bearer your_api_key_here`
 </ParamField>
 
 ## Path Parameters
@@ -38,7 +38,7 @@ This endpoint requires authentication. [Get your API key](/quickstart) to start 
 
 ```bash cURL
 curl https://api.exchangeratesapi.com.au/2025-08-31/USD \
-  -H "Authorization: Bearer buderim_your_api_key_here"
+  -H "Authorization: Bearer your_api_key_here"
 ```
 
 ```javascript JavaScript
@@ -46,7 +46,7 @@ const date = '2025-08-31';
 const currency = 'USD';
 const response = await fetch(`https://api.exchangeratesapi.com.au/${date}/${currency}`, {
   headers: {
-    'Authorization': 'Bearer buderim_your_api_key_here'
+    'Authorization': 'Bearer your_api_key_here'
   }
 });
 
@@ -61,7 +61,7 @@ date = "2025-08-31"
 currency = "USD"
 url = f"https://api.exchangeratesapi.com.au/{date}/{currency}"
 headers = {
-    "Authorization": "Bearer buderim_your_api_key_here"
+    "Authorization": "Bearer your_api_key_here"
 }
 
 response = requests.get(url, headers=headers)
@@ -79,7 +79,7 @@ curl_setopt_array($curl, array(
   CURLOPT_URL => "https://api.exchangeratesapi.com.au/{$date}/{$currency}",
   CURLOPT_RETURNTRANSFER => true,
   CURLOPT_HTTPHEADER => array(
-    'Authorization: Bearer buderim_your_api_key_here'
+    'Authorization: Bearer your_api_key_here'
   ),
 ));
 
