--- a/api-reference/authenticated/historical-date.mdx
+++ b/api-reference/authenticated/historical-date.mdx
@@ -15,7 +15,7 @@ This endpoint requires authentication. [Get your API key](/quickstart) to start 
 ## Authentication
 
 <ParamField header="Authorization" type="string" required>
-  Bearer token with your API key: `Bearer buderim_your_api_key_here`
+  Bearer token with your API key: `Bearer your_api_key_here`
 </ParamField>
 
 ## Path Parameters
@@ -32,14 +32,14 @@ This endpoint requires authentication. [Get your API key](/quickstart) to start 
 
 ```bash cURL
 curl https://api.exchangeratesapi.com.au/2025-08-31 \
-  -H "Authorization: Bearer buderim_your_api_key_here"
+  -H "Authorization: Bearer your_api_key_here"
 ```
 
 ```javascript JavaScript
 const date = '2025-08-31';
 const response = await fetch(`https://api.exchangeratesapi.com.au/${date}`, {
   headers: {
-    'Authorization': 'Bearer buderim_your_api_key_here'
+    'Authorization': 'Bearer your_api_key_here'
   }
 });
 
@@ -53,7 +53,7 @@ import requests
 date = "2025-08-31"
 url = f"https://api.exchangeratesapi.com.au/{date}"
 headers = {
-    "Authorization": "Bearer buderim_your_api_key_here"
+    "Authorization": "Bearer your_api_key_here"
 }
 
 response = requests.get(url, headers=headers)
@@ -70,7 +70,7 @@ curl_setopt_array($curl, array(
   CURLOPT_URL => "https://api.exchangeratesapi.com.au/{$date}",
   CURLOPT_RETURNTRANSFER => true,
   CURLOPT_HTTPHEADER => array(
-    'Authorization: Bearer buderim_your_api_key_here'
+    'Authorization: Bearer your_api_key_here'
   ),
 ));
 
