--- a/api-reference/authenticated/latest-currency.mdx
+++ b/api-reference/authenticated/latest-currency.mdx
@@ -15,7 +15,7 @@ This endpoint requires authentication. [Get your API key](/quickstart) to start 
 ## Authentication
 
 <ParamField header="Authorization" type="string" required>
-  Bearer token with your API key: `Bearer buderim_your_api_key_here`
+  Bearer token with your API key: `Bearer your_api_key_here`
 </ParamField>
 
 ## Path Parameters
@@ -32,13 +32,13 @@ This endpoint requires authentication. [Get your API key](/quickstart) to start 
 
 ```bash cURL
 curl https://api.exchangeratesapi.com.au/latest/USD \
-  -H "Authorization: Bearer buderim_your_api_key_here"
+  -H "Authorization: Bearer your_api_key_here"
 ```
 
 ```javascript JavaScript
 const response = await fetch('https://api.exchangeratesapi.com.au/latest/USD', {
   headers: {
-    'Authorization': 'Bearer buderim_your_api_key_here'
+    'Authorization': 'Bearer your_api_key_here'
   }
 });
 
@@ -51,7 +51,7 @@ import requests
 
 url = "https://api.exchangeratesapi.com.au/latest/USD"
 headers = {
-    "Authorization": "Bearer buderim_your_api_key_here"
+    "Authorization": "Bearer your_api_key_here"
 }
 
 response = requests.get(url, headers=headers)
@@ -67,7 +67,7 @@ curl_setopt_array($curl, array(
   CURLOPT_URL => 'https://api.exchangeratesapi.com.au/latest/USD',
   CURLOPT_RETURNTRANSFER => true,
   CURLOPT_HTTPHEADER => array(
-    'Authorization: Bearer buderim_your_api_key_here'
+    'Authorization: Bearer your_api_key_here'
   ),
 ));
 
