--- a/api-reference/authenticated/timeseries.mdx
+++ b/api-reference/authenticated/timeseries.mdx
@@ -15,7 +15,7 @@ This endpoint requires authentication. [Get your API key](/quickstart) to start 
 ## Authentication
 
 <ParamField header="Authorization" type="string" required>
-  Bearer token with your API key: `Bearer buderim_your_api_key_here`
+  Bearer token with your API key: `Bearer your_api_key_here`
 </ParamField>
 
 ## Query Parameters
@@ -50,12 +50,12 @@ This endpoint requires authentication. [Get your API key](/quickstart) to start 
 
 ```bash cURL - All Currencies
 curl "https://api.exchangeratesapi.com.au/timeseries?start_date=2025-08-01&end_date=2025-08-31" \
-  -H "Authorization: Bearer buderim_your_api_key_here"
+  -H "Authorization: Bearer your_api_key_here"
 ```
 
 ```bash cURL - Specific Currencies
 curl "https://api.exchangeratesapi.com.au/timeseries?start_date=2025-08-01&end_date=2025-08-31&symbols=USD,EUR,GBP" \
-  -H "Authorization: Bearer buderim_your_api_key_here"
+  -H "Authorization: Bearer your_api_key_here"
 ```
 
 ```javascript JavaScript
@@ -67,7 +67,7 @@ const params = new URLSearchParams({
 
 const response = await fetch(`https://api.exchangeratesapi.com.au/timeseries?${params}`, {
   headers: {
-    'Authorization': 'Bearer buderim_your_api_key_here'
+    'Authorization': 'Bearer your_api_key_here'
   }
 });
 
@@ -80,7 +80,7 @@ import requests
 
 url = "https://api.exchangeratesapi.com.au/timeseries"
 headers = {
-    "Authorization": "Bearer buderim_your_api_key_here"
+    "Authorization": "Bearer your_api_key_here"
 }
 params = {
     "start_date": "2025-08-01",
@@ -106,7 +106,7 @@ curl_setopt_array($curl, array(
   CURLOPT_URL => "https://api.exchangeratesapi.com.au/timeseries?{$params}",
   CURLOPT_RETURNTRANSFER => true,
   CURLOPT_HTTPHEADER => array(
-    'Authorization: Bearer buderim_your_api_key_here'
+    'Authorization: Bearer your_api_key_here'
   ),
 ));
 
