--- a/authentication.mdx
+++ b/authentication.mdx
@@ -50,13 +50,13 @@ Pass your API key in the `Authorization` header using the Bearer scheme:
 
 ```bash cURL
 curl https://api.exchangeratesapi.com.au/latest \
-  -H "Authorization: Bearer buderim_your_api_key_here"
+  -H "Authorization: Bearer your_api_key_here"
 ```
 
 ```javascript JavaScript
 const response = await fetch('https://api.exchangeratesapi.com.au/latest', {
   headers: {
-    'Authorization': 'Bearer buderim_your_api_key_here'
+    'Authorization': 'Bearer your_api_key_here'
   }
 });
 ```
@@ -65,7 +65,7 @@ const response = await fetch('https://api.exchangeratesapi.com.au/latest', {
 import requests
 
 headers = {
-    'Authorization': 'Bearer buderim_your_api_key_here'
+    'Authorization': 'Bearer your_api_key_here'
 }
 
 response = requests.get(
@@ -77,7 +77,7 @@ response = requests.get(
 ```php PHP
 <?php
 $headers = [
-    'Authorization: Bearer buderim_your_api_key_here'
+    'Authorization: Bearer your_api_key_here'
 ];
 
 $curl = curl_init();
@@ -152,7 +152,7 @@ API keys should only be used in server-side applications. **Never expose API key
 
 ```javascript
 // ❌ Bad - Never do this in frontend code
-const API_KEY = 'buderim_your_api_key_here'; // Exposed to users!
+const API_KEY = 'your_api_key_here'; // Exposed to users!
 
 // ✅ Good - Call your backend API instead
 const response = await fetch('/api/exchange-rates');
@@ -282,7 +282,7 @@ Use this simple test to verify your API key works:
 
 ```bash cURL Test
 curl -i https://api.exchangeratesapi.com.au/latest \
-  -H "Authorization: Bearer buderim_your_api_key_here"
+  -H "Authorization: Bearer your_api_key_here"
 ```
 
 ```javascript JavaScript Test
@@ -290,7 +290,7 @@ async function testAuth() {
   try {
     const response = await fetch('https://api.exchangeratesapi.com.au/latest', {
       headers: {
-        'Authorization': 'Bearer buderim_your_api_key_here'
+        'Authorization': 'Bearer your_api_key_here'
       }
     });
     
@@ -317,7 +317,7 @@ def test_auth():
     try:
         response = requests.get(
             'https://api.exchangeratesapi.com.au/latest',
-            headers={'Authorization': 'Bearer buderim_your_api_key_here'}
+            headers={'Authorization': 'Bearer your_api_key_here'}
         )
         
         data = response.json()
