--- a/quickstart.mdx
+++ b/quickstart.mdx
@@ -27,7 +27,7 @@ description: 'Get up and running with the Exchange Rates API in under 2 minutes'
     
     ```bash
     curl https://api.exchangeratesapi.com.au/latest \
-      -H "Authorization: Bearer buderim_your_api_key_here"
+      -H "Authorization: Bearer your_api_key_here"
     ```
   </Step>
 </Steps>
@@ -40,13 +40,13 @@ Let's start with the most common use case - getting current exchange rates:
 
 ```bash cURL
 curl https://api.exchangeratesapi.com.au/latest \
-  -H "Authorization: Bearer buderim_your_api_key_here"
+  -H "Authorization: Bearer your_api_key_here"
 ```
 
 ```javascript JavaScript
 const response = await fetch('https://api.exchangeratesapi.com.au/latest', {
   headers: {
-    'Authorization': 'Bearer buderim_your_api_key_here'
+    'Authorization': 'Bearer your_api_key_here'
   }
 });
 
@@ -64,7 +64,7 @@ if (data.success) {
 import requests
 
 headers = {
-    'Authorization': 'Bearer buderim_your_api_key_here'
+    'Authorization': 'Bearer your_api_key_here'
 }
 
 response = requests.get(
@@ -83,7 +83,7 @@ else:
 
 ```php PHP
 <?php
-$api_key = 'buderim_your_api_key_here';
+$api_key = 'your_api_key_here';
 
 $curl = curl_init();
 curl_setopt_array($curl, [
@@ -140,7 +140,7 @@ Convert amounts between currencies:
 
 ```bash cURL
 curl "https://api.exchangeratesapi.com.au/convert?from=AUD&to=USD&amount=100" \
-  -H "Authorization: Bearer buderim_your_api_key_here"
+  -H "Authorization: Bearer your_api_key_here"
 ```
 
 ```javascript JavaScript
@@ -152,7 +152,7 @@ const response = await fetch(
   `https://api.exchangeratesapi.com.au/convert?from=${from}&to=${to}&amount=${amount}`,
   {
     headers: {
-      'Authorization': 'Bearer buderim_your_api_key_here'
+      'Authorization': 'Bearer your_api_key_here'
     }
   }
 );
@@ -171,7 +171,7 @@ params = {
 }
 
 headers = {
-    'Authorization': 'Bearer buderim_your_api_key_here'
+    'Authorization': 'Bearer your_api_key_here'
 }
 
 response = requests.get(
@@ -197,7 +197,7 @@ curl_setopt_array($curl, [
     CURLOPT_URL => 'https://api.exchangeratesapi.com.au/convert?' . $params,
     CURLOPT_RETURNTRANSFER => true,
     CURLOPT_HTTPHEADER => [
-        'Authorization: Bearer buderim_your_api_key_here'
+        'Authorization: Bearer your_api_key_here'
     ],
 ]);
 
@@ -237,7 +237,7 @@ Get exchange rates from any date since 2018:
 
 ```bash cURL
 curl https://api.exchangeratesapi.com.au/2024-12-01 \
-  -H "Authorization: Bearer buderim_your_api_key_here"
+  -H "Authorization: Bearer your_api_key_here"
 ```
 
 ```javascript JavaScript
@@ -247,7 +247,7 @@ const response = await fetch(
   `https://api.exchangeratesapi.com.au/${historicalDate}`,
   {
     headers: {
-      'Authorization': 'Bearer buderim_your_api_key_here'
+      'Authorization': 'Bearer your_api_key_here'
     }
   }
 );
@@ -261,7 +261,7 @@ import requests
 
 historical_date = '2024-12-01'
 headers = {
-    'Authorization': 'Bearer buderim_your_api_key_here'
+    'Authorization': 'Bearer your_api_key_here'
 }
 
 response = requests.get(
@@ -282,7 +282,7 @@ Always check the `success` field in responses:
 ```javascript
 const response = await fetch('https://api.exchangeratesapi.com.au/latest', {
   headers: {
-    'Authorization': 'Bearer buderim_your_api_key_here'
+    'Authorization': 'Bearer your_api_key_here'
   }
 });
 
