refactor: rename api frontmatter key to openapi across all documentation files

--- a/api-reference/authenticated/convert-authenticated.mdx
+++ b/api-reference/authenticated/convert-authenticated.mdx
@@ -1,6 +1,6 @@
 ---
 title: 'Currency Conversion (Authenticated)'
-api: 'GET /convert'
+openapi: 'GET /convert'
 description: 'Convert amounts between currencies with unlimited requests and historical date support'
 ---
 
