--- a/api-reference/authenticated/historical-date-currency.mdx
+++ b/api-reference/authenticated/historical-date-currency.mdx
@@ -1,6 +1,6 @@
 ---
 title: 'Historical Rate for Currency and Date'
-api: 'GET /{date}/{currency}'
+openapi: 'GET /{date}/{currency}'
 description: 'Get the exchange rate for a specific currency on a specific historical date'
 ---
 
