--- a/api-reference/authenticated/historical-date.mdx
+++ b/api-reference/authenticated/historical-date.mdx
@@ -1,6 +1,6 @@
 ---
 title: 'Historical Rates for Date'
-api: 'GET /{date}'
+openapi: 'GET /{date}'
 description: 'Get all exchange rates for a specific historical date from the Reserve Bank of Australia'
 ---
 
