--- a/api-reference/authenticated/latest.mdx
+++ b/api-reference/authenticated/latest.mdx
@@ -1,6 +1,6 @@
 ---
 title: 'Latest Exchange Rates'
-api: 'GET /latest'
+openapi: 'GET /latest'
 description: 'Get the most recent exchange rates for all supported currencies from the Reserve Bank of Australia'
 ---
 
