--- a/api-reference/authenticated/timeseries.mdx
+++ b/api-reference/authenticated/timeseries.mdx
@@ -1,6 +1,6 @@
 ---
 title: 'Historical Exchange Rates'
-api: 'GET /timeseries'
+openapi: 'GET /timeseries'
 description: 'Get exchange rates for a date range with optional currency filtering (maximum 365 days)'
 ---
 
