--- a/api-reference/public/convert-free.mdx
+++ b/api-reference/public/convert-free.mdx
@@ -1,6 +1,6 @@
 ---
 title: 'Free Currency Conversion'
-api: 'GET /convert'
+openapi: 'GET /convert'
 description: 'Convert currencies using the latest exchange rates with a free tier limit of 3 requests per hour per IP'
 ---
 
