--- a/api-reference/public/status.mdx
+++ b/api-reference/public/status.mdx
@@ -1,6 +1,6 @@
 ---
 title: 'API Status'
-api: 'GET /status'
+openapi: 'GET /status'
 description: 'Check the operational status of the Exchange Rates API and when data was last updated'
 ---
 
