--- a/api-reference/public/symbols.mdx
+++ b/api-reference/public/symbols.mdx
@@ -1,6 +1,6 @@
 ---
 title: 'Supported Currencies'
-api: 'GET /symbols'
+openapi: 'GET /symbols'
 description: 'Get a complete list of all supported currencies with names, symbols, and country information'
 ---
 
