--- a/introduction.mdx
+++ b/introduction.mdx
@@ -5,12 +5,12 @@ description: 'Welcome to the Exchange Rates API - Official Reserve Bank of Austr
 
 <img
   className="block dark:hidden"
-  src="/images/hero-light.png"
+  src="/bg-light.png"
   alt="Hero Light"
 />
 <img
   className="hidden dark:block"
-  src="/images/hero-dark.png"
+  src="/bg.png"
   alt="Hero Dark"
 />
 
