--- a/quickstart.mdx
+++ b/quickstart.mdx
@@ -17,7 +17,7 @@ description: 'Get up and running with the Exchange Rates API in under 2 minutes'
   </Step>
   
   <Step title="Generate API Key">
-    In the dashboard, click **"Generate New API Key"**. Your API key will have a unique Australian suburb prefix (e.g., `buderim_abc123...`).
+    In the dashboard, click **"Generate New API Key"**. Your API key will have a unique prefix (e.g., `buderim_abc123...`).
     
     <Warning>Copy your API key immediately - it's only shown once for security reasons</Warning>
   </Step>
