fix: update image paths and icon to match correct asset locations

--- a/introduction.mdx
+++ b/introduction.mdx
@@ -5,12 +5,12 @@ description: 'Welcome to the Exchange Rates API - Official Reserve Bank of Austr
 
 <img
   className="block dark:hidden"
-  src="/bg-light.png"
+  src="bg-light.png"
   alt="Hero Light"
 />
 <img
   className="hidden dark:block"
-  src="/bg.png"
+  src="bg.png"
   alt="Hero Dark"
 />
 
@@ -21,7 +21,7 @@ The Exchange Rates API is a developer-focused service providing **official Reser
 <CardGroup cols={2}>
   <Card
     title="Official RBA Data"
-    icon="university"
+    icon="school"
     href="/guides/compliance"
   >
     Direct from the Reserve Bank of Australia, updated daily at 4:00 PM AEST
