chore: update image paths and alt text for hero background images

--- a/introduction.mdx
+++ b/introduction.mdx
@@ -5,13 +5,13 @@ description: 'Welcome to the Exchange Rates API - Official Reserve Bank of Austr
 
 <img
   className="block dark:hidden"
-  src="bg-light.png"
-  alt="Hero Light"
+  src="bg.png"
+  alt="Background Light"
 />
 <img
   className="hidden dark:block"
   src="bg.png"
-  alt="Hero Dark"
+  alt="Background Dark"
 />
 
 ## Welcome to Exchange Rates API
