chore: replace SVG logo and favicon with PNG versions and update page title

--- a/introduction.mdx
+++ b/introduction.mdx
@@ -1,5 +1,5 @@
 ---
-title: Introduction
+title: Exchange Rates API - Official API Documentation
 description: 'Welcome to the Exchange Rates API - Official Reserve Bank of Australia exchange rate data through modern REST endpoints'
 ---
 
