chore: update documentation title and change Asia-Pacific accordion icon

--- a/introduction.mdx
+++ b/introduction.mdx
@@ -1,5 +1,5 @@
 ---
-title: Exchange Rates API - Official API Documentation
+title: Exchange Rates API - Documentation
 description: 'Welcome to the Exchange Rates API - Official Reserve Bank of Australia exchange rate data through modern REST endpoints'
 ---
 
@@ -81,7 +81,7 @@ We support all currencies published by the RBA:
     - **CAD** - Canadian Dollar
   </Accordion>
   
-  <Accordion title="Asia-Pacific" icon="globe-asia">
+  <Accordion title="Asia-Pacific" icon="globe">
     - **CNY** - Chinese Renminbi
     - **KRW** - South Korean Won
     - **SGD** - Singapore Dollar
