--- a/api-reference/public/root.mdx
+++ b/api-reference/public/root.mdx
@@ -1,5 +1,5 @@
 ---
-title: 'API Root'
+title: 'API Endpoints'
 openapi: 'GET /'
 description: 'Returns basic API information and documentation link'
 ---
