docs: simplify API endpoint titles and remove root endpoint documentation

--- a/api-reference/authenticated/convert-authenticated.mdx
+++ b/api-reference/authenticated/convert-authenticated.mdx
@@ -1,5 +1,5 @@
 ---
-title: 'Currency Conversion (Authenticated)'
+title: 'Currency Conversion for Date'
 openapi: 'GET /convert'
 description: 'Convert amounts between currencies with unlimited requests and historical date support'
 ---
