--- a/api-reference/public/convert-free.mdx
+++ b/api-reference/public/convert-free.mdx
@@ -1,12 +1,12 @@
 ---
-title: 'Free Currency Conversion'
+title: 'Currency Conversion'
 openapi: 'GET /convert'
 description: 'Convert currencies using the latest exchange rates with a free tier limit of 3 requests per hour per IP'
 ---
 
 ## Overview
 
-The free conversion endpoint allows you to convert between AUD and other supported currencies without authentication. This is perfect for testing, demos, and light usage scenarios.
+The conversion endpoint allows you to convert between AUD and other supported currencies without authentication. This is perfect for testing, demos, and light usage scenarios.
 
 <Note>
 **Rate Limit**: 3 requests per hour per IP address. For unlimited conversion, [get an API key](/quickstart) and use the authenticated conversion endpoint.
