--- a/api-reference/public/status.mdx
+++ b/api-reference/public/status.mdx
@@ -1,5 +1,5 @@
 ---
-title: 'API Status'
+title: 'Status'
 openapi: 'GET /status'
 description: 'Check the operational status of the Exchange Rates API and when data was last updated'
 ---
