--- a/api-reference/authenticated/historical-date-currency.mdx
+++ b/api-reference/authenticated/historical-date-currency.mdx
@@ -1,5 +1,5 @@
 ---
-title: 'Historical Rate for Currency and Date'
+title: 'Historical Rate for Currency and Date (/{date}/{currency})'
 openapi: 'GET /{date}/{currency}'
 description: 'Get the exchange rate for a specific currency on a specific historical date'
 ---
