--- a/api-reference/authenticated/historical-date.mdx
+++ b/api-reference/authenticated/historical-date.mdx
@@ -1,5 +1,5 @@
 ---
-title: 'Historical Rates for Date'
+title: 'Historical Rates for Date (/{date})'
 openapi: 'GET /{date}'
 description: 'Get all exchange rates for a specific historical date from the Reserve Bank of Australia'
 ---
