--- a/api-reference/authenticated/latest.mdx
+++ b/api-reference/authenticated/latest.mdx
@@ -1,5 +1,5 @@
 ---
-title: 'Latest Exchange Rates'
+title: 'Latest Exchange Rates (/latest)'
 openapi: 'GET /latest'
 description: 'Get the most recent exchange rates for all supported currencies from the Reserve Bank of Australia'
 ---
@@ -218,7 +218,6 @@ X-RBA-Source-Date: 2025-08-30
   "timestamp": 1725080400,
   "base": "AUD", 
   "date": "2025-08-30",
-  "stale": true,
   "rates": { ... }
 }
 ```
