--- a/rate-limits.mdx
+++ b/rate-limits.mdx
@@ -340,7 +340,7 @@ Consider upgrading when you:
 
 <Steps>
   <Step title="Choose Plan">
-    Compare plans on our [pricing page](https://exchangeratesapi.com.au/pricing)
+    Compare plans on our [pricing page](https://www.exchangeratesapi.com.au/pricing)
   </Step>
   
   <Step title="Upgrade in Dashboard">
