--- a/api-reference/authenticated/latest-currency.mdx
+++ b/api-reference/authenticated/latest-currency.mdx
@@ -1,5 +1,5 @@
 ---
-title: 'Latest Rate for Currency'
+title: 'Latest Rate for Currency (/latest/{currency})'
 openapi: 'GET /latest/{currency}'
 description: 'Get the current exchange rate for a specific currency from the Reserve Bank of Australia'
 ---
