docs: update integration links and remove emoji from code examples

--- a/guides/support.mdx
+++ b/guides/support.mdx
@@ -365,10 +365,10 @@ Contact [enterprise@exchangeratesapi.com.au](mailto:enterprise@exchangeratesapi.
 ### Knowledge Base
 
 **Common Integration Patterns:**
-- [Currency conversion calculators](/sdks/javascript#currency-conversion)
-- [Historical analysis dashboards](/sdks/python#time-series-analysis) 
-- [E-commerce integration guides](/guides/best-practices#caching-strategies)
-- [Mobile app considerations](/guides/best-practices#api-key-security)
+- [Currency conversion calculators](/sdks/javascript)
+- [Historical analysis dashboards](/guides/best-practices) 
+- [E-commerce integration guides](/guides/best-practices)
+- [Mobile app considerations](/guides/best-practices)
 
 ### Example Code Repository
 
