fix: escape < symbols in markdown to prevent HTML parsing issues

--- a/guides/support.mdx
+++ b/guides/support.mdx
@@ -398,9 +398,9 @@ Official code examples and SDKs are coming soon. Current examples are community-
 
 ### Response Time Targets
 
-- **Australia/NZ**: <50ms average, <100ms p95
-- **Asia-Pacific**: <100ms average, <200ms p95  
-- **Global**: <200ms average, <400ms p95
+- **Australia/NZ**: &lt;50ms average, &lt;100ms p95
+- **Asia-Pacific**: &lt;100ms average, &lt;200ms p95  
+- **Global**: &lt;200ms average, &lt;400ms p95
 
 ### Maintenance Windows
 
