--- a/rate-limits.mdx
+++ b/rate-limits.mdx
@@ -154,9 +154,9 @@ Optimize your usage by understanding patterns:
   </Accordion>
   
   <Accordion title="Response Times" icon="stopwatch">
-    - **Australian CDN**: <50ms average
-    - **Asia-Pacific**: <100ms average
-    - **Global**: <200ms average
+    - **Australian CDN**: &lt;50ms average
+    - **Asia-Pacific**: &lt;100ms average
+    - **Global**: &lt;200ms average
     - **Historical queries**: +20-50ms additional
   </Accordion>
 </AccordionGroup>
