--- a/introduction.mdx
+++ b/introduction.mdx
@@ -20,7 +20,7 @@ The Exchange Rates API is a developer-focused data service providing **official 
   <Card
     title="Official RBA Data"
     icon="school"
-    href="/guides/compliance"
+    href="/legal/compliance"
   >
     Direct from the Reserve Bank of Australia, updated daily at 4:00 PM AEST
   </Card>
@@ -64,7 +64,7 @@ Australian businesses need this **official RBA data** for:
 - Accounting software integrations
 
 <Note>
-All data is sourced from the Reserve Bank of Australia. We are not affiliated with or endorsed by the RBA. See our [compliance guide](/guides/compliance) for attribution requirements.
+All data is sourced from the Reserve Bank of Australia. We are not affiliated with or endorsed by the RBA. See our [compliance guide](/legal/compliance) for attribution requirements.
 </Note>
 
 ## Supported Currencies
