--- a/support.mdx
+++ b/support.mdx
@@ -6,7 +6,7 @@ description: 'Get help with the Exchange Rates API - support channels, response 
 ## Support Channels
 
 ### Email Support
-📧 **[support@exchangeratesapi.com.au](mailto:support@exchangeratesapi.com.au)**
+**[support@exchangeratesapi.com.au](mailto:support@exchangeratesapi.com.au)**
 
 Our primary support channel for:
 - Technical questions and integration help
